--- a/network-frontend/src/components/Register/Register.css
+++ b/network-frontend/src/components/Register/Register.css
@@ -3,8 +3,10 @@
 .login {
     width: 400px;
     max-width: 400px;
+    height: 330px;
     margin: 0 auto;
     padding: 10px;
+    margin-top: 200px;
     border: 1px solid #ccc;
     background-color: #f9f9f9;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
