--- a/network-frontend/src/components/profile/Profile.css
+++ b/network-frontend/src/components/profile/Profile.css
@@ -1,102 +1,77 @@
-/* Profile.css */
+.info {
+  display: flex;
+  align-items: center;
+  width: 400px;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .profile-container {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.recommendations {
-  /* Styles for the Recommendations section acting as a navbar */
-  flex: 1; /* Fill the whole width */
-}
-
-.posts {
-  /* Styles for the Posts section below the Recommendations navbar */
-  flex-grow: 1; /* Fill the remaining vertical space */
-}
-
-.post{
-  width: 800px;
-  background-color: #000080;
-  border-radius: 20px;
-  padding: 20px;
-  color: white;
-  margin: 8px;
-  /* height: 200px; */
-}
-
-
-.row{
-  margin: 5px;
-}
-
-.row textarea{
-  width: 100%;
-  height: 150px;
-  border-radius: 20px;
-}
-
-.button-container {
-  display: flex;
-  justify-content: flex-end;
-  height: 30px;
-}
-
-.row.header {
-  display: flex;
   justify-content: space-between;
-  align-items: center; /* Vertically center the content */
-  height: 40px;
+  width: 100%;
 }
 
 
-.delete-btn{
-  background-color: rgb(172, 0, 0);
-  border-radius: 20px;
-  border-color: transparent;
-  color: white;
-  width: 60px;
-  height: 30px;
+
+.left-container {
+  width: 100px;
+  background-color: #f0f0f0;
+  padding: 20px;
+  box-sizing: border-box;
+  overflow: hidden;
+  opacity: 0; /* Start with opacity set to 0 */
+  transition: width 0.3s ease, opacity 0.3s ease; /* Add transitions for width and opacity */
 }
 
-.delete-btn:hover{
-  cursor: pointer;
-  background-color: rgb(255, 0, 0);
-  transition: 0.1s;
-  width: 62px;
-  height: 32px;
+.left-container:hover {
+  width: 25%;
+  opacity: 1; /* Change opacity to 1 on hover */
 }
 
-.like-btn{
-  background-color: #000099;
-  border-radius: 20px;
-  border-color: transparent;
-  color: white;
-  width: 60px;
-  height: 30px;
+
+
+
+
+.right-container {
+  align-items: center;
+  justify-content: center;
+  /* display: flex; */
+  width: 100%;
+  flex: 3;
+  /* Adjust the flex value as needed */
+  background-color: #ffffff;
+  /* Adjust the background color as needed */
+  padding: 20px;
+  /* Add padding for spacing */
+  box-sizing: border-box;
+  /* Include padding and border in the width */
 }
 
-.like-btn:hover{
-  cursor: pointer;
-  background-color: #0000cf;
-  transition: 0.1s;
-  width: 62px;
-  height: 32px;
+.info-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-.comment-btn{
-  background-color: #000099;
-  border-radius: 20px;
-  border-color: transparent;
-  color: white;
-  width: 90px;
-  height: 30px;
+.info-row p {
+  margin: 5px;
+  /* Add some spacing between the paragraphs if needed */
 }
 
-.comment-btn:hover{
-  cursor: pointer;
-  background-color: #0000cf;
-  transition: 0.1s;
-  width: 92px;
-  height: 32px;
+.recommended-user {
+  display: flex;
+  justify-content: space-between; /* This places the first and last name on the left and the button on the right */
+  align-items: center;
+  width: 350px;
+  padding: 10px;
+  margin: 10px;
+  margin-left: 30px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
