--- a/network-frontend/src/components/profile/Posts.css
+++ b/network-frontend/src/components/profile/Posts.css
@@ -108,6 +108,13 @@
   border: none;
   font-size: 24px;
   cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+
+.like-btn:hover{
+  transform: scale(1.3);
+  transition: 0.2s;
 }
 
 .row-content {
@@ -116,7 +123,7 @@
 
 textarea {
   width: 96%;
-  height: 100px;
+  height: 80px;
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 10px;
@@ -138,3 +145,5 @@ textarea {
 .comment-btn:hover {
   background-color: #0056b3;
 }
+
+
