--- a/network-frontend/src/components/profile/Profile.css
+++ b/network-frontend/src/components/profile/Profile.css
@@ -75,3 +75,31 @@
   background-color: #f5f5f5;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+/* Add this CSS to your existing styles */
+.modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black overlay */
+  z-index: 999; /* Ensure it's above other content */
+}
+
+.modal{
+  width: 100%;
+  max-width: 300px; 
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  /* margin-top: 20px; */
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
