--- a/network-frontend/src/components/profile/Posts.css
+++ b/network-frontend/src/components/profile/Posts.css
@@ -1,70 +1,74 @@
 /* Add these styles to your CSS file */
 .posts {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center content horizontally */
-    margin: 20px;
-  }
-  
-  .new-post {
-    width: 100%;
-    max-width: 600px; /* Adjust the maximum width as needed */
-    padding: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
-  .new-post textarea {
-    width: 96%;
-    height: 150px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    margin-top: 10px;
-    resize: none;
-  }
-  
-  .comment-btn {
-    background-color: #007bff;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .comment-btn:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .comment-btn:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Style for individual posts, adjust as needed */
-  .post {
-    width: 100%;
-    max-width: 600px; /* Adjust the maximum width as needed */
-    padding: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-  }
-  
-  /* Add these styles to your CSS file */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Center content horizontally */
+  margin: 20px;
+}
+
+.new-post {
+  width: 100%;
+  max-width: 600px;
+  /* Adjust the maximum width as needed */
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.new-post textarea {
+  width: 96%;
+  height: 150px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 10px;
+  resize: none;
+}
+
+.comment-btn {
+  background-color: #007bff;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.comment-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.comment-btn:hover {
+  background-color: #0056b3;
+}
+
+/* Style for individual posts, adjust as needed */
+.post {
+  width: 100%;
+  max-width: 600px;
+  /* Adjust the maximum width as needed */
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+/* Add these styles to your CSS file */
 .post {
   width: 100%;
   width: 600px;
-  max-width: 600px; /* Adjust the maximum width as needed */
+  max-width: 600px;
+  /* Adjust the maximum width as needed */
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -113,7 +117,7 @@
   height: 50px;
 }
 
-.like-btn:hover{
+.like-btn:hover {
   transform: scale(1.3);
   transition: 0.2s;
 }
@@ -147,4 +151,107 @@ textarea {
   background-color: #0056b3;
 }
 
+.reactions-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
 
+.reactions-container h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+
+.reactions span {
+  margin-left: 10px;
+}
+
+/* Add hover effect to individual reactions */
+.reactions:hover {
+  background-color: #e0e0e0;
+  transition: background-color 0.3s ease;
+}
+
+/* Style for the reactions container */
+.reactions-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.reactions-container h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+/* Add hover effect to individual reactions */
+.reactions:hover {
+  background-color: #e0e0e0;
+  transition: background-color 0.3s ease;
+}
+
+.comments-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.comments-container h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+
+.comments span {
+  margin-left: 10px;
+}
+
+/* Add hover effect to individual reactions */
+.comments:hover {
+  background-color: #e0e0e0;
+  transition: background-color 0.3s ease;
+}
+
+/* Style for the reactions container */
+.comments-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.comments-container h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+/* Add hover effect to individual reactions */
+.comments:hover {
+  background-color: #e0e0e0;
+  transition: background-color 0.3s ease;
+}
+
+.close-btn {
+  margin-left: 70%;
+  background-color: #007bff;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
