--- a/network-frontend/src/components/profile/Profile.css
+++ b/network-frontend/src/components/profile/Profile.css
@@ -1,12 +1,7 @@
-.info {
+.info-container{
   display: flex;
   align-items: center;
-  width: 400px;
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid #ccc;
-  background-color: #f5f5f5;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  justify-content: center;
 }
 
 .profile-container {
@@ -31,10 +26,6 @@
   width: 25%;
   opacity: 1; /* Change opacity to 1 on hover */
 }
-
-
-
-
 
 .right-container {
   align-items: center;
@@ -67,10 +58,10 @@
   display: flex;
   justify-content: space-between; /* This places the first and last name on the left and the button on the right */
   align-items: center;
-  width: 350px;
+  width: 300px;
   padding: 10px;
   margin: 10px;
-  margin-left: 30px;
+  margin-left: 20px;
   border: 1px solid #ccc;
   background-color: #f5f5f5;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
