--- a/network-frontend/src/components/profile/Profile.css
+++ b/network-frontend/src/components/profile/Profile.css
@@ -18,13 +18,13 @@
   padding: 20px;
   box-sizing: border-box;
   overflow: hidden;
-  opacity: 0; /* Start with opacity set to 0 */
-  transition: width 0.3s ease, opacity 0.3s ease; /* Add transitions for width and opacity */
+  opacity: 0;
+  transition: width 0.3s ease, opacity 0.3s ease; 
 }
 
 .left-container:hover {
   width: 25%;
-  opacity: 1; /* Change opacity to 1 on hover */
+  opacity: 1;
 }
 
 .right-container {
@@ -33,13 +33,9 @@
   /* display: flex; */
   width: 100%;
   flex: 3;
-  /* Adjust the flex value as needed */
   background-color: #ffffff;
-  /* Adjust the background color as needed */
   padding: 20px;
-  /* Add padding for spacing */
   box-sizing: border-box;
-  /* Include padding and border in the width */
 }
 
 .info-row {
@@ -51,12 +47,11 @@
 
 .info-row p {
   margin: 5px;
-  /* Add some spacing between the paragraphs if needed */
 }
 
 .recommended-user {
   display: flex;
-  justify-content: space-between; /* This places the first and last name on the left and the button on the right */
+  justify-content: space-between; 
   align-items: center;
   width: 300px;
   padding: 10px;
@@ -67,7 +62,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Add this CSS to your existing styles */
+
 .modal-overlay {
   display: flex;
   justify-content: center;
@@ -77,8 +72,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black overlay */
-  z-index: 999; /* Ensure it's above other content */
+  background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 999;
 }
 
 .modal{
@@ -92,5 +87,42 @@
   padding: 10px;
   align-items: center;
   justify-content: center;
+}
+
+
+.follow-btn {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.follow-btn:hover {
+  background-color: #0056b3; 
+}
+
+
+.unfollow-btn {
+  background-color: #fff; 
+  color: #007bff;
+  border: 1px solid #007bff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.unfollow-btn:hover {
+  background-color: #007bff;
+  color: #fff;
 }
 
