--- a/network-frontend/src/components/profile/Posts.css
+++ b/network-frontend/src/components/profile/Posts.css
@@ -19,7 +19,17 @@
   text-align: center;
 }
 
-.new-post textarea {
+.topic-content {
+  width: 20%;
+  height: 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 10px;
+  resize: none;
+}
+
+.post-content {
   width: 96%;
   height: 150px;
   border: 1px solid #ccc;
@@ -120,6 +130,23 @@
 .like-btn:hover {
   transform: scale(1.3);
   transition: 0.2s;
+}
+
+.row-topic {
+  /* padding: 4px; */
+  border-radius: 8px;
+  /* color: white; */
+  margin-bottom: 10px;
+  /* background-color: #0056b3; */
+  color: #004186;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.row-topic:hover{
+  /* background-color: #057eff; */
+  transition: 0.5s;
+  color: #007bff;
+  cursor: pointer;
 }
 
 .row-content {
