--- a/network-frontend/src/App.css
+++ b/network-frontend/src/App.css
@@ -181,5 +181,13 @@
   cursor: pointer;
 }
 
-
+.red-dot {
+  background-color: red;
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  margin-left: 4px; /* Adjust as needed for spacing */
+  vertical-align: middle;
+}
 
