--- a/network-frontend/src/components/notifications/Notifications.css
+++ b/network-frontend/src/components/notifications/Notifications.css
@@ -1,34 +1,80 @@
-/* Notifications.css */
 
-/* Style for each individual notification */
-.notification {
-    padding: 10px;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    background-color: #fff; /* Default background color for read notifications */
+.notifications {
+    padding: 20px;
+    padding-left: 300px;
   }
   
-  /* Style for unread notifications */
-  .notification.unread {
-    background-color: #ffc107; /* Background color for unread notifications (e.g., yellow) */
-  }
-  
-  /* Style for the pagination buttons */
   .pagination {
-    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
   }
   
   .pagination-button {
     padding: 5px 10px;
-    margin-right: 10px;
-    background-color: #007bff;
+    margin: 0 5px;
+    background-color: #333;
     color: #fff;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    outline: none;
   }
   
-  .pagination-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
+  .pagination-button:hover {
+    background-color: #555;
+  }
+  
+  .notification {
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .notification.unread {
+    background-color: #e6e8ff; /* Change background color for unread notifications */
+  }
+  
+  /* Show the tooltip on hover */
+  .notification:hover {
+    background-color: #d9d9d9; /* Change background color on hover */
+  }
+  
+  /* Tooltip styles */
+  .notification:hover .tooltip {
+    display: block;
+    position: absolute;
+    background-color: #f0f0f0;
+    padding: 8px;
+    border-radius: 4px;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    font-size: 14px;
+    white-space: nowrap;
+    text-align: center;
+    min-width: max-content;
+  }
+  
+  /* Ensure the tooltip text is centered */
+  .notification:hover .tooltip span {
+    display: inline-block;
+  }
+  
+  /* Ensure the tooltip arrow is centered below the notification */
+  .notification:hover .tooltip::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent transparent #f0f0f0 transparent;
   }
   
