--- a/network-frontend/src/components/profile/Posts.css
+++ b/network-frontend/src/components/profile/Posts.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   /* Center content horizontally */
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .new-post {
@@ -293,4 +293,8 @@ textarea {
   padding-top: 5%;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: larger;
+}
+
+.pagination{
+  padding-top: 20px;
 }
