--- a/network-frontend/src/components/profile/Profile.css
+++ b/network-frontend/src/components/profile/Profile.css
@@ -7,7 +7,8 @@
 .profile-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 70%;
+  align-items: center;
 }
 
 
