--- a/network-frontend/src/components/profile/Posts.css
+++ b/network-frontend/src/components/profile/Posts.css
@@ -298,3 +298,42 @@ textarea {
 .pagination{
   padding-top: 20px;
 }
+
+/* Style for the .comments-container */
+.comments-container {
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 800px; /* Adjust the maximum width as needed */
+  margin: 0 auto; /* Center horizontally */
+}
+
+/* Style for individual comments */
+.comment {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #fff;
+}
+
+/* Style for the row containing username and content */
+.comment-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+/* Style for the username in a comment */
+.comment-username {
+  font-weight: bold;
+  color: #007bff; /* Change the color as needed */
+}
+
+/* Style for the content in a comment */
+.comment-content {
+  color: #333; /* Change the color as needed */
+}
