--- a/network-frontend/src/App.css
+++ b/network-frontend/src/App.css
@@ -1,62 +1,23 @@
-/* App.css */
-
-/* Reset some default styles for body and HTML elements */
-body,
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+body{
+  width: 100%;
+  height: 100vh;
+  margin: 0px;
 }
 
-/* Style the main container */
-.main-container {
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.App{
   display: flex;
+  background-color: rgb(235, 235, 235);
+  width: 100%;
   height: 100%;
 }
 
-/* Style the sidebar */
-.sidebar {
-  width: 250px;
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-}
-
-.sidebar-logo {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.sidebar-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidebar-nav li {
-  margin-bottom: 10px;
-}
-
-.sidebar-button {
-  display: block;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: #fff;
-  transition: background-color 0.3s ease;
-}
-
-.sidebar-button:hover {
-  background-color: #555;
-}
-
-.sidebar-button.active {
-  background-color: #555;
-}
-
-/* Style the page content */
 .page {
-  flex: 1;
-  padding: 20px;
+  width: 90%;
 }
+
+
