--- a/network-frontend/src/components/login/Login.css
+++ b/network-frontend/src/components/login/Login.css
@@ -3,7 +3,6 @@
 .login {
     width: 400px;
     max-width: 400px;
-    height: 355px;
     margin: 0 auto;
     padding: 10px;
     margin-top: 200px;
@@ -46,7 +45,17 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 15px;
   }
+
+  .verification{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column; 
+  }
+
+  
   
   button:disabled {
     background-color: #ccc;
