--- a/network-frontend/src/components/main/MainPage.css
+++ b/network-frontend/src/components/main/MainPage.css
@@ -1,15 +1,13 @@
 .main-page {
-    margin-left: 500px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    /* Adjust as needed */
-    padding: 20px;
-    margin-top: 20px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .trends-container {
-    flex: 1;
-    margin-left: 150px;
-    /* Adjust the margin as needed */
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
