--- a/network-frontend/src/components/reports/Reports.css
+++ b/network-frontend/src/components/reports/Reports.css
@@ -2,6 +2,7 @@
     width: 50%;
     padding: 20px;
     margin-left: 500px;
+    margin-top: 100px;
     background-color: #f5f5f5;
     border: 1px solid #ccc;
     border-radius: 8px;
