--- a/network-frontend/src/components/users/Users.css
+++ b/network-frontend/src/components/users/Users.css
@@ -1,107 +1,57 @@
-.users {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+.user-icon{
+  width: 70px;
+  height: 70px;
 }
 
-.users-button-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.search-container {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
-}
-
-.search-input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  outline: none;
-}
-
-.picture {
-  width: 30px;
-  height: 30px;
-  margin-left: -30px; /* Adjust as needed */
-  cursor: pointer;
-}
-
-.user-button {
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-right: 10px;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.user-button.active {
-  background-color: #555;
-}
-
-.users-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.user {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.user-container{
+  width: 250px;
+  height: 270px;
+  border: 1px solid black;
+  border-radius: 20px;
   margin: 10px;
+  padding: 10px;
+  background-color: white;
 }
 
-.picture {
-  width: 100px;
+.user-name{
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
   height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 10px;
-  margin-left: 0px; /* Add margin-right to move the picture slightly to the right */
 }
 
-.user-name {
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 10px;
+.user-details{
+  height: 100%;
 }
 
-.user-btn-row {
+.users-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-container:hover{
+  background-color: rgb(236, 236, 236);
+  cursor: pointer;
+}
+
+.buttons-container button {
+  margin: 20px;
+  width: 150px;
+}
+
+.buttons-container{
   display: flex;
   justify-content: center;
-  margin-top: 5px;
+  width: 100%;
 }
 
-.user-btn {
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
+.users{
+  width: 70%;
+  height: 70%;
 }
 
-.user-btn:hover {
-  background-color: #555;
-}
-
-.message1 {
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 20px;
+.user-details{
+  margin: 8px;
 }
