--- a/network-frontend/src/components/login/Login.css
+++ b/network-frontend/src/components/login/Login.css
@@ -1,83 +1,36 @@
-/* Profile.css */
-
 .login {
-    width: 400px;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 10px;
-    margin-top: 200px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-  }
-  
-  .login h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  
-  .form-group input {
-    width: 95%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .login button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #000000;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 15px;
-  }
+  width: 400px;
+  height: 350px;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
 
-  .verification{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column; 
-  }
+.register {
+  width: 400px;
+  height: 540px;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
 
-  
-  
-  button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .login button:hover {
-    background-color: #858585;
-    transition: 0.5s;
-  }
-  
-  p {
-    text-align: center;
-    margin-top: 15px;
-  }
-  
-  p a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  p a:hover {
-    text-decoration: underline;
-  } 
-  
+.register > * {
+  margin-bottom: 15px;
+}
+
+.register-link {
+  margin-top: 20px;
+  text-align: center;
+}
